--- a/examples/generalForm.html
+++ b/examples/generalForm.html
@@ -10,29 +10,43 @@
 </head>
 
 <style>
-  /* flex-direction: row || column || row-reverse || column-reverse
-     flex-wrap: nowrap todos en el mismo renglo =>  wrap los envia al siguente renglon
-     justify-content: flex-start, center, space-between => ajusta contenido
-    */
   .flex-container{
     display: flex;
-    flex-direction:row;
-    flex-wrap:wrap;
+    flex-flow: column wrap;
     justify-content:space-between;
-    align-items: center;
+    align-items: center; 
+    flex-direction: column-reverse;
   }
+
+  .flex-item{
+    width: 30vw;
+    height: 8vw;
+  }
+
+  .item1{
+    width: 50vw;
+}
+
+.item2{
+    width: 40vw;
+}
+
+.flex-item:nth-child(4){
+    width: 20vw;
+    flex-basis : auto;
+    line-height:6rem;
+
+}
 
 </style>
 
 <body>
   <h1>Contenedor flexbox</h1>
   <div class="flex-container">
-      <div class="flex-item">1</div>
-      <div class="flex-item">2</div>
+      <div class="flex-item item1">1</div>
+      <div class="flex-item item2">2</div>
       <div class="flex-item">3</div>
       <div class="flex-item">4</div>
-      <div class="flex-item">5</div>
-      <div class="flex-item">6</div>
   </div>
   
   
